Region growing code in pipeline

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f6ce9fc9-dd10-4725-8dc3-d363f4b3ef74",
+   "id": "consecutive-interference",
    "metadata": {},
    "source": [
     "# Urban PointCloud Processing\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac229113-5968-4f88-a818-38fa0a297f78",
+   "id": "responsible-network",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,27 +24,28 @@
     "import time\n",
     "\n",
     "import src.fusion as fusion\n",
+    "import src.region_growing as growing\n",
+    "from src.fusion_pipeline import FusionPipeline\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
-    "from src.region_growing.label_connected_comp import LabelConnectedComp\n",
     "from src.utils.labels import Labels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b25ce935-0e9b-4fbd-bd35-a08db3bdf05b",
+   "id": "western-seller",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
     "in_file = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/labelled_2386_9702.laz'"
+    "out_file = '../datasets/pointcloud/complete_2386_9702.laz'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a09887e-7688-413a-ba18-29865789653c",
+   "id": "turned-softball",
    "metadata": {},
    "source": [
     "## Data Fusion\n",
@@ -57,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f7eb47f-7a5d-4fce-a5aa-6e9030eabea4",
+   "id": "operational-maple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,72 +70,63 @@
     "                                   method='npz', target='ground', epsilon=0.2)\n",
     "# Building fuser using pre-processed AHN data.\n",
     "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
-    "                                     method='npz', target='building', epsilon=0.2)\n",
-    "\n",
-    "# Set-up pipeline.\n",
-    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "pipeline = fusion.FusionPipeline(fusers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dde56738-2f73-43be-b913-3fd4d4401a30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Process the file.\n",
-    "start = time.time()\n",
-    "pipeline.process_file(in_file, out_file=out_file)\n",
-    "end = time.time()\n",
-    "print(f'Tile labelled in {end-start:.2f} seconds.')"
+    "                                     method='npz', target='building', epsilon=0.2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0138a703-17a8-46ef-8549-3cc585f53bd6",
+   "id": "literary-source",
    "metadata": {},
    "source": [
     "## Region Growing\n",
     "\n",
     "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
     "\n",
-    "For details and more options, see [3. Region growing](3.%20Region%20growing.ipynb)."
+    "For details, installation instructions and more options, see [3. Region growing](3.%20Region%20growing.ipynb)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb7b29c-f000-4bec-8975-55c7ea5020fb",
+   "id": "subtle-organ",
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = time.time()\n",
-    "\n",
-    "# Read the LAS file that was created by the data fusion process.\n",
-    "las = las_utils.read_las(out_file)\n",
-    "\n",
-    "# Create a mask that excludes ground points from being added to buildings.\n",
-    "mask = (las.label != Labels.GROUND)\n",
-    "\n",
-    "# Initialize clustering-based region growing class. \n",
-    "lcc = LabelConnectedComp(octree_level=10, min_component_size=100)\n",
-    "\n",
-    "# Process the file\n",
-    "lcc.set_input_cloud(las, mask)\n",
-    "lcc.label_connected_comp()\n",
-    "labels = lcc.fill_components(seed_point_label=Labels.BUILDING, threshold=0.1)\n",
-    "\n",
-    "# Save the refined labels.\n",
-    "las_utils.label_and_save_las(las, labels, out_file)\n",
-    "\n",
-    "end = time.time()\n",
-    "print(f'Finished in {end-start:.2f} seconds.')"
+    "# Region growing with building points as initial seed points. \n",
+    "exclude_labels = (Labels.GROUND,)\n",
+    "region_growing = growing.RegionGrowing(Labels.BUILDING, exclude_labels)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a99c4260-e3f9-460f-9941-965f2a438d6b",
+   "id": "collaborative-durham",
+   "metadata": {},
+   "source": [
+    "## Process the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "involved-palestine",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up pipeline.\n",
+    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
+    "growers = (building_region_growing_fuser,)\n",
+    "pipeline = FusionPipeline(fusers, growers)\n",
+    "\n",
+    "start = time.time()\n",
+    "# Process the file.\n",
+    "pipeline.process_file(in_file, out_file)\n",
+    "end = time.time()\n",
+    "print(f'Tile labelled in {end-start:.2f} seconds.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "neural-welsh",
    "metadata": {},
    "source": [
     "## View the result (e.g. in CloudCompare)\n",
@@ -142,8 +134,16 @@
     "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\".\n",
     "\n",
     "The result should look like this:\n",
-    "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/media/examples/demo_result.png)"
+    "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/examples/demo_result.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hawaiian-inside",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
