--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -25,32 +25,28 @@
     "import time\n",
     "\n",
     "from src.utils.las_utils import label_and_save_las\n",
-    "from src.utils.labels import Labels"
+    "from src.utils.labels import Labels\n",
+    "import src.region_growing as growing\n",
+    "from src.fusion_pipeline import FusionPipeline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# In this example we want to grow the building points, the initial seed points.\n",
-    "# The ground points must be removed to fast and properly cluster the cloud\n",
+    "# The ground points must be removed to fast and properly cluster the cloud.\n",
     "seed_point_label = Labels.BUILDING\n",
-    "exclude_label = Labels.GROUND\n",
-    "\n",
-    "# Select the file to process.\n",
-    "in_file = \"../datasets/pointcloud/labelled_2386_9702.laz\"\n",
-    "out_file = \"../datasets/pointcloud/grown_2386_9702.laz\""
+    "exclude_labels = (Labels.GROUND,)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Region growing segmentation\n",
+    "## Region growing segmentation based on PCL\n",
     "\n",
     "### Algorithm explained\n",
     "Based on: https://pcl.readthedocs.io/projects/tutorials/en/latest/region_growing_segmentation.html\n",
@@ -66,47 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.region_growing.region_growing import RegionGrowing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read LiDAR point cloud\n",
-    "las = pylas.read(in_file)\n",
-    "# Configure the points that we want to perform region growing on \n",
-    "mask = (las.label != exclude_label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = time.time()\n",
-    "\n",
-    "# Initialize region growing class\n",
-    "reg = RegionGrowing()\n",
-    "# Process the file\n",
-    "reg.set_input_cloud(las, seed_point_label, mask)\n",
-    "regions = reg.region_growing(seed_point_label, las.label)\n",
-    "\n",
-    "end = time.time()\n",
-    "print(f'Finished in {end-start:.2f} seconds.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save labelled point cloud\n",
-    "label_and_save_las(las, regions, out_file)"
+    "# Region growing with building points as initial seed points. \n",
+    "region_growing_pcl = growing.RegionGrowing(Labels.BUILDING, exclude_labels)"
    ]
   },
   {
@@ -130,7 +87,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.region_growing.label_connected_comp import LabelConnectedComp"
+    "# Region growing with building points as initial seed points. \n",
+    "region_growing_clustering = growing.LabelConnectedComp(Labels.BUILDING, exclude_labels,\n",
+    "                                                       octree_level=10, min_component_size=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process point clouds and save the results"
    ]
   },
   {
@@ -139,10 +105,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read LiDAR point cloud\n",
-    "las = pylas.read(in_file)\n",
-    "# Configure the points that we want to perform region growing on \n",
-    "mask = (las.label != exclude_label)"
+    "# Set-up region growing based on PCL pipeline.\n",
+    "growers = (region_growing_pcl,)\n",
+    "pipeline = FusionPipeline(region_growing=growers)"
    ]
   },
   {
@@ -151,17 +116,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set-up clustering based region growing pipeline.\n",
+    "growers = (region_growing_clustering,)\n",
+    "pipeline = FusionPipeline(region_growing=growers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process a single file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
+    "in_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
+    "out_file = '../datasets/pointcloud/grown_2386_9702.laz'\n",
+    "\n",
+    "# Process the file.\n",
     "start = time.time()\n",
-    "\n",
-    "# Initialize clustering based region growing class\n",
-    "lcc = LabelConnectedComp(octree_level=10, min_component_size=100)\n",
-    "# Process the file\n",
-    "lcc.set_input_cloud(las, mask)\n",
-    "lcc.label_connected_comp()\n",
-    "regions = lcc.fill_components(seed_point_label, threshold=0.1)\n",
-    "\n",
+    "pipeline.process_file(in_file, out_file=out_file)\n",
     "end = time.time()\n",
-    "print(f'Finished in {end-start:.2f} seconds.')"
+    "print(f'Tile labelled in {end-start:.2f} seconds.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process a folder"
    ]
   },
   {
@@ -170,8 +158,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save labelled point cloud\n",
-    "label_and_save_las(las, regions, out_file)"
+    "# Select the folder to process. \n",
+    "in_folder = '../datasets/pointcloud/'\n",
+    "# Output folder. 'None' uses the input folder.\n",
+    "out_folder = None\n",
+    "# Suffix to add to the filename of processed files. An empty string indicates \n",
+    "# that the same filename is kept; when out_folder=None this means overwriting.\n",
+    "suffix = '_grown'\n",
+    "\n",
+    "# Process the folder.\n",
+    "pipeline.process_folder(in_folder, out_folder=out_folder, suffix=suffix)"
    ]
   },
   {
