--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -25,9 +25,7 @@
     "\n",
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
-    "from src.fusion_pipeline import FusionPipeline\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.las_utils as las_utils\n",
+    "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
    ]
   },
@@ -94,7 +92,7 @@
    "source": [
     "# Region growing with building points as initial seed points. \n",
     "exclude_labels = (Labels.GROUND,)\n",
-    "region_growing = growing.RegionGrowing(Labels.BUILDING, exclude_labels)"
+    "building_grower = growing.RegionGrowing(Labels.BUILDING, exclude_labels)"
    ]
   },
   {
@@ -114,8 +112,8 @@
    "source": [
     "# Set-up pipeline.\n",
     "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "growers = (building_region_growing_fuser,)\n",
-    "pipeline = FusionPipeline(fusers, growers)\n",
+    "growers = (building_grower,)\n",
+    "pipeline = Pipeline(fusers, growers)\n",
     "\n",
     "start = time.time()\n",
     "# Process the file.\n",
