--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -27,7 +27,7 @@
     "from src.utils.las_utils import label_and_save_las\n",
     "from src.utils.labels import Labels\n",
     "import src.region_growing as growing\n",
-    "from src.fusion_pipeline import FusionPipeline"
+    "from src.pipeline import Pipeline"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "source": [
     "# Set-up region growing based on PCL pipeline.\n",
     "growers = (region_growing_pcl,)\n",
-    "pipeline = FusionPipeline(region_growing=growers)"
+    "pipeline = Pipeline(region_growing=growers)"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "source": [
     "# Set-up clustering based region growing pipeline.\n",
     "growers = (region_growing_clustering,)\n",
-    "pipeline = FusionPipeline(region_growing=growers)"
+    "pipeline = Pipeline(region_growing=growers)"
    ]
   },
   {
