Laatste voor merge

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -92,7 +92,8 @@
    "source": [
     "# Region growing with building points as initial seed points. \n",
     "exclude_labels = (Labels.GROUND,)\n",
-    "building_grower = growing.RegionGrowing(Labels.BUILDING, exclude_labels)"
+    "building_grower = growing.LabelConnectedComp(Labels.BUILDING, exclude_labels,\n",
+    "                                             octree_level=10, min_component_size=100)"
    ]
   },
   {
