Region Growing code in pipeline (#10)
* Region growing abstract class

* Region growing code in pipeline

* Feedback verwerkt

--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -30,6 +30,7 @@
     "import time\n",
     "\n",
     "import src.fusion as fusion\n",
+    "from src.pipeline import Pipeline\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "from src.utils.labels import Labels"
    ]
@@ -156,7 +157,7 @@
    "source": [
     "# Set-up full AHN pipeline.\n",
     "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "pipeline = fusion.FusionPipeline(fusers)"
+    "pipeline = Pipeline(fusers=fusers)"
    ]
   },
   {
@@ -168,7 +169,7 @@
    "source": [
     "# ALTERNATIVE: Set-up AHN GeoTIFF + BGT pipeline.\n",
     "fusers = (geotiff_ground_fuser, bgt_building_fuser)\n",
-    "pipeline = fusion.FusionPipeline(fusers)"
+    "pipeline = Pipeline(fusers=fusers)"
    ]
   },
   {
