--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -32,6 +32,8 @@
     "import src.fusion as fusion\n",
     "from src.pipeline import Pipeline\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.las_utils as las_utils\n",
+    "import src.scrapers.bgt_scraper as bgt_scraper\n",
     "from src.utils.labels import Labels"
    ]
   },
@@ -117,11 +119,28 @@
    "metadata": {},
    "source": [
     "### [Alternative] Building fuser using BGT data\n",
-    "First, download the required BGT data. E.g. for our demo point cloud, run the following lines in a terminal: \n",
-    "```sh\n",
-    "$ cd ../scripts\n",
-    "$ python bgt_building_scraper.py --bbox_region \"119300,485150,119350,485100\" --out_folder ../datasets/bgt/\n",
-    "```"
+    "First, download and parse the required BGT data. E.g. for our demo point cloud, run the following cell: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "compound-mayor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data folder for the BGT fuser.\n",
+    "bgt_data_folder = '../datasets/bgt/'\n",
+    "\n",
+    "# Specify the bounding box of the area we want to scrape.\n",
+    "# For example, we can find the bounding box of a LAS file.\n",
+    "bbox_padded = las_utils.get_bbox_from_las_folder('../datasets/pointcloud/', padding=10)\n",
+    "\n",
+    "# Scrape data from the Amsterdam WFS, this will return a json response.\n",
+    "json_response = bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox_padded)\n",
+    "\n",
+    "# Parse the downloaded json response.\n",
+    "bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
    ]
   },
   {
@@ -131,9 +150,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data folder for the BGT fuser.\n",
-    "bgt_data_folder = '../datasets/bgt/'\n",
-    "\n",
     "# Building fuser using BGT building footprint data.\n",
     "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)"
    ]
