Remove set_index from df

--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compound-mayor",
+   "id": "reported-potter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "json_response = bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox_padded)\n",
     "\n",
     "# Parse the downloaded json response.\n",
-    "bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
+    "csv_headers = bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
    ]
   },
   {
@@ -151,7 +151,8 @@
    "outputs": [],
    "source": [
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, csv_headers, building_offset=1,\n",
+    "                                             bgt_folder=bgt_data_folder)"
    ]
   },
   {
@@ -266,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
