--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reported-potter",
+   "id": "dutch-resource",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "json_response = bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox_padded)\n",
     "\n",
     "# Parse the downloaded json response.\n",
-    "csv_headers = bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
+    "bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
    ]
   },
   {
@@ -151,8 +151,7 @@
    "outputs": [],
    "source": [
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, csv_headers, building_offset=1,\n",
-    "                                             bgt_folder=bgt_data_folder)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)"
    ]
   },
   {
