Nope trager juist

--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c4489f95-98a5-4ed2-87e7-36a0554960a2",
    "metadata": {},
    "outputs": [],
@@ -124,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dutch-resource",
+   "execution_count": 2,
+   "id": "endless-rehabilitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,13 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "caring-bryan",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.89 ms ± 197 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)"
+    "%timeit bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)"
    ]
   },
   {
