--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -33,7 +33,7 @@
     "from src.pipeline import Pipeline\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
-    "import src.scrapers.bgt_scraper as bgt_scraper\n",
+    "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
     "from src.utils.labels import Labels"
    ]
   },
@@ -129,18 +129,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data folder for the BGT fuser.\n",
+    "# Data folder and file for the BGT fuser.\n",
     "bgt_data_folder = '../datasets/bgt/'\n",
+    "bgt_data_file = '../datasets/bgt/bgt_buildings.csv'\n",
     "\n",
     "# Specify the bounding box of the area we want to scrape.\n",
     "# For example, we can find the bounding box of a LAS file.\n",
     "bbox_padded = las_utils.get_bbox_from_las_folder('../datasets/pointcloud/', padding=10)\n",
     "\n",
     "# Scrape data from the Amsterdam WFS, this will return a json response.\n",
-    "json_response = bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox_padded)\n",
+    "json_response = ams_bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox_padded)\n",
     "\n",
     "# Parse the downloaded json response.\n",
-    "bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
+    "ams_bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
    ]
   },
   {
@@ -151,7 +152,7 @@
    "outputs": [],
    "source": [
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_file=bgt_data_file)"
    ]
   },
   {
