Update 4. Label cars.ipynb

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -15,6 +15,7 @@
     "from src.utils.labels import Labels\n",
     "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
     "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file\n",
+    "from src.utils.clip_utils import poly_clip\n",
     "from src.region_growing.label_connected_comp import LabelConnectedComp"
    ]
   },
@@ -44,18 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c29a6fcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO dit gaat alleen werken voor een tegel met weinig heuvels\n",
-    "avg_ground_height = np.average(pointcloud.z[las_labels == Labels.GROUND])\n",
-    "max_z_thresh = avg_ground_height + 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "89a24ba1",
    "metadata": {},
    "outputs": [],
@@ -66,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdec5ca0",
+   "id": "caaca2a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c39284",
+   "id": "c569a79d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,10 +80,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c29a6fcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_above_ground = 3\n",
+    "\n",
+    "# TODO dit gaat alleen werken voor een tegel met weinig heuvels\n",
+    "avg_ground_height = np.average(pointcloud.z[las_labels == Labels.GROUND])\n",
+    "max_z_thresh = avg_ground_height + m_above_ground\n",
+    "print(max_z_thresh)\n",
+    "\n",
+    "# TODO Daarom miss beter het gemiddelde van een stukje road berekenen.\n",
+    "if joined_road_polygons:\n",
+    "    road_mask = poly_clip(points, joined_road_polygons[0]) # Take one polygon\n",
+    "    avg_ground_height = np.average(pointcloud.z[road_mask])\n",
+    "    max_z_thresh = avg_ground_height + m_above_ground\n",
+    "    print(max_z_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "48b39c75",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO dit verwerken in de pipeline?\n",
     "lcc = LabelConnectedComp(Labels.CAR, exclude_labels, octree_level=10,\n",
     "                         min_component_size=100)\n",
     "lcc._set_mask(las_labels)\n",
@@ -117,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19422b1b",
+   "id": "9ce8f29e",
    "metadata": {},
    "outputs": [],
    "source": []
