--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caaca2a3",
+   "id": "caa8faf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c569a79d",
+   "id": "93a93a7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +112,8 @@
     "lcc._set_mask(las_labels)\n",
     "lcc._convert_input_cloud(points)\n",
     "lcc._label_connected_comp()\n",
-    "las_labels = lcc._overlapping_components(joined_road_polygons, max_z_thresh, \n",
-    "                                         min_area_thresh=6, max_area_thresh=16)"
+    "las_labels = lcc._overlapping_polygons(joined_road_polygons, max_z_thresh, \n",
+    "                                       min_area_thresh=6, max_area_thresh=16)"
    ]
   },
   {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce8f29e",
+   "id": "960842c7",
    "metadata": {},
    "outputs": [],
    "source": []
