--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caa8faf2",
+   "id": "a77b9825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93a93a7f",
+   "id": "31413553",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +94,20 @@
     "# TODO Daarom miss beter het gemiddelde van een stukje road berekenen.\n",
     "if joined_road_polygons:\n",
     "    road_mask = poly_clip(points, joined_road_polygons[0]) # Take one polygon\n",
-    "    avg_ground_height = np.average(pointcloud.z[road_mask])\n",
+    "    road_ground_mask = np.logical_and(las_labels == Labels.GROUND,road_mask)\n",
+    "    avg_ground_height = np.average(pointcloud.z[road_ground_mask])\n",
     "    max_z_thresh = avg_ground_height + m_above_ground\n",
     "    print(max_z_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2663dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_mask"
    ]
   },
   {
@@ -129,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "960842c7",
+   "id": "c80796e9",
    "metadata": {},
    "outputs": [],
    "source": []
